--- a/LinqLabs.csproj
+++ b/LinqLabs.csproj
@@ -76,12 +76,32 @@
     <Compile Include="5. FrmLinq_To_Entity.Designer.cs">
       <DependentUpon>5. FrmLinq_To_Entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="AwDataset.cs">
+      <DependentUpon>AwDataset.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="AwDataset.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AwDataset.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ClsMyUtility.cs" />
     <Compile Include="Frm作業_1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm作業_1.designer.cs">
       <DependentUpon>Frm作業_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm作業_2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm作業_2.Designer.cs">
+      <DependentUpon>Frm作業_2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm作業_3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm作業_3.Designer.cs">
+      <DependentUpon>Frm作業_3.cs</DependentUpon>
     </Compile>
     <Compile Include="NWDataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -108,6 +128,12 @@
     <EmbeddedResource Include="Frm作業_1.resx">
       <DependentUpon>Frm作業_1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm作業_2.resx">
+      <DependentUpon>Frm作業_2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm作業_3.resx">
+      <DependentUpon>Frm作業_3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -118,6 +144,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="AwDataset.xsc">
+      <DependentUpon>AwDataset.xsd</DependentUpon>
+    </None>
+    <None Include="AwDataset.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AwDataset.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="AwDataset.xss">
+      <DependentUpon>AwDataset.xsd</DependentUpon>
+    </None>
     <None Include="NWDataSet1.xsc">
       <DependentUpon>NWDataSet1.xsd</DependentUpon>
     </None>
